[package]
name = "mui-joy"
version = "0.1.0"
edition = "2021"
description = "Joy UI components implemented in Rust leveraging mui-system."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mui/mui-rust"
homepage = "https://github.com/mui/mui-rust"
documentation = "https://docs.rs/mui-joy"
keywords = ["material", "ui", "web"]
categories = ["gui"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
mui-system = { path = "../mui-system" }
leptos = { workspace = true, optional = true }
yew = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
dioxus = { workspace = true, optional = true }
sycamore = { workspace = true, optional = true }
gloo-timers = { version = "0.2", optional = true }

[dev-dependencies]
wasm-bindgen-test.workspace = true
gloo-utils = "0.2"
web-sys = { workspace = true, features = ["HtmlElement", "Event", "EventTarget"] }

[features]
default = []
yew = ["dep:yew", "dep:wasm-bindgen", "mui-system/yew", "dep:gloo-timers"]
leptos = ["dep:leptos", "dep:wasm-bindgen", "mui-system/leptos"]
dioxus = ["dep:dioxus", "dep:wasm-bindgen", "mui-system/dioxus"]
sycamore = ["dep:sycamore", "dep:wasm-bindgen", "mui-system/sycamore"]
