[package]
name = "mui-styled-engine-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for mui-styled-engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mui/mui-rust"
homepage = "https://github.com/mui/mui-rust"
documentation = "https://docs.rs/mui-styled-engine-macros"
keywords = ["material", "ui", "web"]
categories = ["gui"]

[badges]
maintenance = { status = "experimental" }

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { version = "2", features = ["full"] }
