[package]
name = "mui-styled-engine"
version = "0.1.0"
edition = "2021"
description = "Styling engine for Material UI Rust components providing theme primitives."
license = "MIT OR Apache-2.0"

[dependencies]
mui-system = { path = "../mui-system" }
stylist = { version = "0.13", default-features = false, features = ["macros", "parser", "yew_integration", "ssr"] }
yew = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
mui-styled-engine-macros = { path = "../mui-styled-engine-macros" }

[features]
default = []
yew = ["mui-system/yew", "dep:yew", "dep:wasm-bindgen", "stylist/yew_integration"]

[dev-dependencies]
criterion = "0.5"
proptest.workspace = true

[[bench]]
name = "style_bench"
harness = false
