[package]
name = "mui-system"
version = "0.1.0"
edition = "2021"
description = "Foundational styling primitives for the Material UI Rust ecosystem."
license = "MIT OR Apache-2.0"

[dependencies]
# Use shared versions from the workspace. These dependencies are optional
# and can be enabled when the crate needs to integrate with a specific
# front-end framework. Serde is pulled in to allow JSON serialization of
# theme structures.
serde.workspace = true
serde_json.workspace = true
leptos = { workspace = true, optional = true }
yew = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test.workspace = true

[features]
default = []
yew = ["dep:yew", "dep:wasm-bindgen", "dep:web-sys"]
leptos = ["dep:leptos", "dep:wasm-bindgen", "dep:web-sys"]

[[example]]
name = "basic"
required-features = ["yew"]
