[package]
name = "rustic-ui-headless"
version = "0.1.0"
edition.workspace = true
license.workspace = true
# Standardized metadata keeps each crate aligned and enables automated tooling
# to reason about the entire workspace without manual per-crate overrides.
repository = "https://github.com/apotheon-ai/rusticui"
homepage = "https://apotheon.ai/rusticui"
documentation = "https://docs.rs/rustic-ui-headless"
keywords = ["material", "ui", "web"]
categories = ["gui"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
# Use std only; no external dependencies beyond std.

[dev-dependencies]
proptest.workspace = true

[features]
default = []
compat-mui = []
