[package]
name = "rustic-ui-joy"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Joy UI components implemented in Rust leveraging rustic-ui-system."
repository = "https://github.com/apotheon-ai/rusticui"
homepage = "https://apotheon.ai/rusticui"
documentation = "https://docs.rs/rustic-ui-joy"
keywords = ["material", "ui", "web"]
categories = ["gui"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
rustic-ui-system = { path = "../rustic-ui-system", version = "0.1.0" }
rustic-ui-headless = { path = "../rustic-ui-headless", version = "0.1.0" }
leptos = { workspace = true, optional = true }
yew = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
dioxus = { workspace = true, optional = true }
sycamore = { workspace = true, optional = true }
gloo-timers = { version = "0.2", optional = true }

[dev-dependencies]
wasm-bindgen-test.workspace = true
gloo-utils = "0.2"
web-sys = { workspace = true, features = ["HtmlElement", "Event", "EventTarget"] }

[features]
default = []
compat-mui = []
yew = ["dep:yew", "dep:wasm-bindgen", "rustic-ui-system/yew", "dep:gloo-timers"]
leptos = ["dep:leptos", "dep:wasm-bindgen", "rustic-ui-system/leptos"]
dioxus = ["dep:dioxus", "dep:wasm-bindgen", "rustic-ui-system/dioxus"]
sycamore = ["dep:sycamore", "dep:wasm-bindgen", "rustic-ui-system/sycamore"]
