[package]
name = "rustic-ui-lab"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Experimental widgets for MUI Rust. These APIs are unstable and subject to change."
repository = "https://github.com/apotheon-ai/rusticui"
homepage = "https://apotheon.ai/rusticui"
documentation = "https://docs.rs/rustic-ui-lab"
keywords = ["material", "ui", "web"]
categories = ["gui"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
once_cell = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

# Optional date/time backends
chrono = { workspace = true, optional = true }
time = { workspace = true, optional = true }

[features]
default = []
# Enable compatibility aliases only during the rename transition.
compat-mui = []
# Enable experimental widgets individually to keep compile times lean.
autocomplete = []
date-picker = []
data-grid = []
time-picker = []
masonry = []
tree-view = []
timeline = []
localization = ["dep:serde", "dep:once_cell"]
# Features toggling which date library backing to use.
chrono = ["dep:chrono"]
time = ["dep:time"]

[dev-dependencies]
# Use chrono and time in tests for deterministic date math and serialization checks.
chrono = { workspace = true }
time = { workspace = true }
serde_json = { workspace = true }
