[package]
name = "rustic-ui-material"
version = "0.1.0"
edition = "2021"
description = "Material Design components implemented in Rust leveraging rustic_ui_system."
repository = "https://github.com/apotheon-ai/rusticui"
homepage = "https://apotheon.ai/rusticui"
documentation = "https://docs.rs/rustic-ui-material"
keywords = ["material", "ui", "web"]
categories = ["gui"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
rustic-ui-styled-engine = { path = "../rustic-ui-styled-engine" }
rustic-ui-system = { path = "../rustic-ui-system" }
rustic-ui-headless = { path = "../rustic-ui-headless" }
leptos = { workspace = true, optional = true }
yew = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
stylist = { version = "0.13", default-features = false, features = ["macros", "parser"] }
rustic-ui-utils = { path = "../rustic-ui-utils" }
web-sys = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test.workspace = true
gloo-utils = "0.2"

[features]
default = []
yew = ["dep:yew", "dep:wasm-bindgen", "rustic-ui-system/yew", "rustic-ui-styled-engine/yew", "dep:web-sys"]
leptos = ["dep:leptos", "dep:wasm-bindgen", "rustic-ui-system/leptos"]
dioxus = ["rustic-ui-system/dioxus", "rustic-ui-styled-engine/dioxus"]
sycamore = ["rustic-ui-system/sycamore", "rustic-ui-styled-engine/sycamore"]
