[package]
name = "rustic-ui-styled-engine-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for rustic-ui-styled-engine"
repository = "https://github.com/apotheon-ai/rusticui"
homepage = "https://apotheon.ai/rusticui"
documentation = "https://docs.rs/rustic-ui-styled-engine-macros"
keywords = ["material", "ui", "web"]
categories = ["gui"]

[badges]
maintenance = { status = "experimental" }

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { version = "2", features = ["full"] }
