[package]
name = "rustic-ui-styled-engine"
version = "0.1.0"
edition = "2021"
description = "Styling engine for Material UI Rust components providing theme primitives."
repository = "https://github.com/apotheon-ai/rusticui"
homepage = "https://apotheon.ai/rusticui"
documentation = "https://docs.rs/rustic-ui-styled-engine"
keywords = ["material", "ui", "web"]
categories = ["gui"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
rustic-ui-system = { path = "../rustic-ui-system" }
stylist = { version = "0.13", default-features = false, features = ["macros", "parser", "yew_integration", "ssr"] }
yew = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
rustic-ui-styled-engine-macros = { path = "../rustic-ui-styled-engine-macros" }

[features]
default = []
compat-mui = []
yew = ["rustic-ui-system/yew", "dep:yew", "dep:wasm-bindgen", "stylist/yew_integration"]
leptos = ["rustic-ui-system/leptos"]
dioxus = ["rustic-ui-system/dioxus"]
sycamore = ["rustic-ui-system/sycamore"]

[dev-dependencies]
criterion = "0.5"
proptest.workspace = true
trybuild = "1.0"

[[bench]]
name = "style_bench"
harness = false
