[package]
name = "data-display-avatar"
version = "0.1.0"
edition = "2021"
description = "Cross-framework avatar blueprint combining mui-material chips and tooltips."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
mui-material = { path = "../../crates/rustic-ui-material" }
mui-headless = { path = "../../crates/rustic-ui-headless" }
mui-styled-engine = { path = "../../crates/rustic-ui-styled-engine" }
mui-system = { path = "../../crates/rustic-ui-system" }
