[package]
name = "data-display-leptos"
version = "0.1.0"
edition = "2021"
description = "Cookbook example showcasing RusticUI list and table renderers with Leptos"
license = "MIT OR Apache-2.0"

[workspace]
members = []

[dependencies]
leptos = { version = "0.6", default-features = false, features = ["csr", "ssr"] }
wasm-bindgen = "0.2"
mui-material = { path = "../../crates/rustic-ui-material" }
mui-headless = { path = "../../crates/rustic-ui-headless" }
mui-styled-engine = { path = "../../crates/rustic-ui-styled-engine", features = ["leptos"] }
